--- a/Collecting_job_data_using_APIs-Lab.ipynb
+++ b/Collecting_job_data_using_APIs-Lab.ipynb
@@ -407,7 +407,7 @@
    },
    "outputs": [],
    "source": [
-    " def get_number_of_jobs_L(location):\n",
+    "def get_number_of_jobs_L(location):\n",
     "    #your coe goes here\n",
     "    payload = {\"Location\": location}\n",
     "    response = requests.get(api_url, params=payload)\n",
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
@@ -669,7 +669,7 @@
     "    result = get_number_of_jobs_T(technology)\n",
     "    ws.append(result)\n",
     "\n",
-    "wb.save('job-postings-t.xlsx')"
+    "wb.save('github-job-postings.xlsx')"
    ]
   },
   {
